--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -2,7 +2,7 @@
 
 {% block mobile-resume-nav %}
 <li class="nav-item active">
-    <a class="nav-link nav-text" href="pages/resume/resume.html"><i class="fas fa-file-signature"></i> Resume</a>
+    <a class="nav-link nav-text" href=""><i class="fas fa-file-signature"></i> Resume</a>
 </li>
 {% endblock %}
 
@@ -12,7 +12,7 @@
 
 {% block desktop-resume-nav %}
 <li class="nav-item active">
-    <a class="nav-link nav-text" href="pages/resume/resume.html"><i class="fas fa-file-signature"></i> Resume</a>
+    <a class="nav-link nav-text" href=""><i class="fas fa-file-signature"></i> Resume</a>
 </li>
 {% endblock %}
 <div class = "hero-sub-image">
