Resume link in index works, and resume heading was corrected

--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -69,6 +69,7 @@
         </ul>
       </div>
   </nav>
+  {% block hero-image-text %}
   <div class = "hero-text text-center">
     <div class="hero-large-font">Wassim Katbey</div>
     <div class = "hero-large-sub-font">
@@ -80,6 +81,7 @@
       </form>
     </div>
   </div>
+  {% endblock %}
 </div>
 
 
