--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -15,6 +15,19 @@
     <a class="nav-link nav-text" href=""><i class="fas fa-file-signature"></i> Resume</a>
 </li>
 {% endblock %}
+
+{% block hero-image-text %}
+<div class = "hero-text text-center">
+  <div class = "hero-small-font">
+    Resume & References
+  </div>
+  <div class="hero-small-sub-font">
+    Browse through my skills, education, and experience
+  </div>
+</div>
+{% endblock %}
+
+<!--
 <div class = "hero-sub-image">
     <nav class="navbar navbar-expand-lg navbar-light navbar-transparent navbar-desktop">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +56,7 @@
       Browse through my skills, education, and experience
     </div>
   </div>
-</div>
+</div> -->
 
 {% block body %}
   <main>
