--- a/blog/templates/blog/create-blog.html
+++ b/blog/templates/blog/create-blog.html
@@ -13,11 +13,14 @@
 {% block body %}
 <div class="container">
     <div class = "heading-text" style="padding-bottom: 0px; padding-top: 50px" id="intro">
-      A Programmer's Haven <img src="https://img.icons8.com/nolan/64/000000/speech-bubble.png">
+      Write Away! <img src="https://img.icons8.com/nolan/64/000000/speech-bubble.png">
     </div>
     <div class="form-group">
         {{ blog_creation_form.title.label_tag }}
         {{ blog_creation_form.title }}
+    </div>
+    <div class="form-group">
+      {{ blog_creation_form.text_entry }}
     </div>
 </div>
 {% endblock %}
