Adding Vue, and TinyMce, but will likely replace TinyMce with Quill

--- a/static_website/templates/static_website/base.html
+++ b/static_website/templates/static_website/base.html
@@ -17,6 +17,8 @@
     integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
   <link rel="stylesheet" href="{% static 'static_website/custom_stylesheet.css' %}">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  {% block head_elements %}
+  {% endblock %}
 </head>
 <body class="bg-light">
 
@@ -99,6 +101,9 @@
    </div>
  </footer>
 
+ {% block footer_elements %}
+
+ {% endblock %}
 
 <script type="text/javascript" src="https://cdn.emailjs.com/sdk/2.1.0/email.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
