--- a/blog/templates/blog/create-blog.html
+++ b/blog/templates/blog/create-blog.html
@@ -1,4 +1,11 @@
 {% extends 'static_website/base.html' %}
+{% load static %}
+
+{% block head_elements %}
+<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+<script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js"></script>
+<script>tinymce.init({selector:'textarea'});</script>
+{% endblock %}
 
 {% block hero-image-type %}
 <div class = "hero-sub-image">
@@ -11,7 +18,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container" id="blog_creation_app">
     <div class = "heading-text" style="padding-bottom: 0px; padding-top: 50px" id="intro">
       Write Away! <img src="https://img.icons8.com/nolan/64/000000/speech-bubble.png">
     </div>
@@ -23,4 +30,9 @@
       {{ blog_creation_form.text_entry }}
     </div>
 </div>
+{% endblock %}
+
+{% block footer_elements %}
+  <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
+  <script src="{% static 'blog/blog-creation-app.js' %}"></script>
 {% endblock %}
