--- a/blog/templates/blog/create-blog.html
+++ b/blog/templates/blog/create-blog.html
@@ -2,14 +2,6 @@
 {% load static %}
 
 {% block head_elements %}
-<link href="//cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-<link href="//cdn.quilljs.com/1.3.6/quill.bubble.css" rel="stylesheet">
-<link href="//cdn.quilljs.com/1.3.6/quill.core.css" rel="stylesheet">
-<script src="//cdn.quilljs.com/1.3.6/quill.core.js"></script>
-<script src="//cdn.quilljs.com/1.3.6/quill.js"></script>
-<script src="//cdn.quilljs.com/1.3.6/quill.min.js"></script>
-
-<script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js"></script>
 <script>tinymce.init({selector:'textarea'});</script>
 {% endblock %}
@@ -34,13 +26,11 @@
         {{ blog_creation_form.title }}
     </div>
     <div class="form-group">
-      <div id="editor" style="height: 40em">
-        
-      </div>
+      {{ blog_creation_form.text_entry }}
     </div>
 </div>
 {% endblock %}
 
 {% block footer_elements %}
-  <script src="{% static 'blog/blog-creation-app.js' %}"></script>
+
 {% endblock %}
