--- a/blog/templates/blog/index.html
+++ b/blog/templates/blog/index.html
@@ -15,5 +15,12 @@
     <div class = "heading-text" style="padding-bottom: 0px; padding-top: 50px" id="intro">
       A Programmer's Haven <img src="https://img.icons8.com/nolan/64/000000/speech-bubble.png">
     </div>
+    {% for blog in blogs %}
+    <div class="row">
+      <div class="col-lg-6">
+        {{ blog.title }}
+      </div>
+    </div>
+    {% endfor %}
 </div>
 {% endblock %}
