--- a/blog/templates/blog/create-blog.html
+++ b/blog/templates/blog/create-blog.html
@@ -25,11 +25,11 @@
     <form method='POST' action="{% url 'blog:create' %}">
       {% csrf_token %}
       <div class="form-group">
-          {{ blog_creation_form.title.label_tag }}
-          {{ blog_creation_form.title }}
+          {{ blog_form.title.label_tag }}
+          {{ blog_form.title }}
       </div>
       <div class="form-group">
-        {{ blog_creation_form.text_entry }}
+        {{ blog_form.text_entry }}
       </div>
       <div class="row">
         <div class="col-lg-6">
