--- a/blog/templates/blog/blogentry_list.html
+++ b/blog/templates/blog/blogentry_list.html
@@ -15,7 +15,7 @@
     <div class = "heading-text" style="padding-bottom: 0px; padding-top: 50px" id="intro">
       A Programmer's Haven <img src="https://img.icons8.com/nolan/64/000000/speech-bubble.png">
     </div>
-    {% for blog in blogs %}
+    {% for blog in blog_entries %}
     <div class="row">
       <div class="col-lg-6">
         {{ blog.title }}
