--- a/static_website/static/static_website/custom_stylesheet.css
+++ b/static_website/static/static_website/custom_stylesheet.css
@@ -1,279 +1,455 @@
+html {
+    font-size: 16px;
+}
+
 .hero-image {
-	background-image: url("./cover-image-3.jpg");
-	height: 1000px;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-} 
+    background-image: url("./cover-image-3.jpg");
+    height: 1000px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
 
 .hero-sub-image {
-	background-image: url("./cover-image-3.jpg");
-	height: 679px;
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover;
-	position: relative;
+    background-image: url("./cover-image-3.jpg");
+    height: 679px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 .hero-text {
-	transform: translateY(10rem);
-	color: #000;
+    transform: translateY(10rem);
+    color: #000;
 }
 
 .hero-small-text {
-	transform: translateY(10rem);
-}
-
-.hero-large-font {
-	font-size: 70px; 
-	font-weight: 300; 
-	color: #000000; 
-	text-align: center;
-}
-
-.hero-large-sub-font {
-	font-size: 35px; 
-	font-weight: 300; 
-	color: #000000; 
-	text-align: center;
+    transform: translateY(10rem);
 }
 
 .hero-small-font {
-	font-size: 50px; 
-	font-weight: 300; 
-	color: #000000; 
-	text-align: center;
+    font-size: 50px;
+    font-weight: 300;
+    color: #000000;
+    text-align: center;
 }
 
 .hero-small-sub-font {
-	font-size: 30px; 
-	font-weight: 300; 
-	color: #000000; 
-	text-align: center;
+    font-size: 30px;
+    font-weight: 300;
+    color: #000000;
+    text-align: center;
 }
 
 .title-font {
-	font-size: 50px; 
-	color: #000000; 
-	text-align: center;
+    font-size: 50px;
+    color: #000000;
+    text-align: center;
 }
 
-.subtitle-font {font-size: 20px; color: #000000; font-weight: 400; text-align: left;}
-.heading-text {font-size: 32px; text-align: center; padding-top: 48px; padding-bottom: 48px; font-weight: 300}
-.card-heading-text {font-size: 28px; padding-bottom: 20px;}
-.card-body-text {font-size: 16px;}
-.body-text {font-size: 20px; font-weight: 300; text-align: left;}
-.image-side-text {font-size: 19px; font-weight: 300; text-align: left;}
-.card-header {font-size: 23px;}
-/*Resume-Exclusive Classes*/
-.resume-heading {font-size: 27px; font-weight: 300; text-align: center;}
-.self-portrait {height: 500px; width: auto; border-radius: 5px; content: url("./pic_of_me.jpg")}
+.subtitle-font {
+    font-size: 20px;
+    color: #000000;
+    font-weight: 400;
+    text-align: left;
+}
 
+.body-text {
+    font-size: 20px;
+    font-weight: 300;
+    text-align: left;
+}
+
+.card-header {
+    font-size: 23px;
+}
+
+
+/*Resume-Exclusive Classes*/
+
+.resume-heading {
+    font-size: 27px;
+    font-weight: 300;
+    text-align: center;
+}
+
+.self-portrait {
+    height: 500px;
+    width: auto;
+    border-radius: 5px;
+    content: url("./pic_of_me.jpg")
+}
 
 .black-background {
-	background: linear-gradient(to right, #000046, #1CB5E0); 
-	color: white; 
-	background-position: center;
-	background-repeat: no-repeat;
-	background-size: cover; 
-	position: relative;
+    background: linear-gradient(to right, #000046, #1CB5E0);
+    color: white;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
 }
 
 .navbar-blue {
-	background-color: #002651;
+    background-color: #002651;
 }
 
-.navbar-transparent { 
-	background: rgba(119,136,153,0); 
+.navbar-transparent {
+    background: rgba(119, 136, 153, 0);
 }
+
 .button-cover {
-	text-align: center;
+    text-align: center;
 }
+
 .navbar-desktop {
-	display: block;
+    display: block;
 }
+
 .navbar-mobile {
-	display: none;
+    display: none;
 }
+
 .padding-on-mobile {
-	padding-top: 0px;
+    padding-top: 0px;
 }
+
 .hide-on-mobile {
-	display: block;
+    display: block;
 }
 
 
 /* ----------- Non-Retina Screens ----------- */
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 1) { 
 
-  div.hero-image {
-  		height: 45rem;
-  }
-	div.hero-sub-image {
-		height: 40rem;
-	}
-	div.hero-text {
-		transform: translateY(9rem);
-	}
-	div.hero-small-text {
-		transform: translate(-20%,-50%);
-	}
-    
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 1) {
+    div.hero-image {
+        height: 45rem;
+    }
+    div.hero-sub-image {
+        height: 40rem;
+    }
+    div.hero-text {
+        transform: translateY(9rem);
+    }
+    div.hero-small-text {
+        transform: translate(-20%, -50%);
+    }
 }
+
 
 /* ----------- Retina Screens ----------- */
-@media screen 
-  and (min-device-width: 1200px) 
-  and (max-device-width: 1600px) 
-  and (-webkit-min-device-pixel-ratio: 2)
-  and (min-resolution: 192dpi) { 
-}
+
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {}
+
 
 /*Extra Small Devices*/
+
 @media (min-device-width: 300px) and (max-device-width: 575.98px) {
-	a#introButton {
-		width: 100px; 
-		height: 40px; 
-		padding-left: 9px; 
-		padding-top: 3px; 
-		padding-bottom: 0px; 
-		padding-right: 10px; 
-		border-color: black; 
-		color: black;
-	}
-
-	a#introButton:hover {
-		background-color: black; 
-		color: white;
-	}
-	
-	div.button-cover {
-		text-align: center;
-	}
-
-	div.hero-large-font {
-		font-size: 30px; 
-		font-weight: 400; 
-		padding-bottom: 10px;
-	}
-
-	div.hero-large-sub-font {
-		font-size: 20px;
-		font-weight: 400;
-	}
-
-	div.hero-small-font {
-		font-size: 25px; 
-		font-weight: 400; 
-		padding-bottom: 10px;
-	}
-	
-	div.hero-small-sub-font {
-		font-size: 20px; font-weight: 400;
-	}
-
-	div.title-font {
-		font-size: 25px; text-align: left;
-	} 
-
-	div.hero-text {
-		position: relative;
-		transform: translateY(4rem);
-	} 
-
-	div.hero-small-text {
-		position: relative;
-		transform: translateY(3.4rem);
-	}
-
-	div.subtitle-font {font-size: 15px; font-weight: 600;} 
-	div.hero-image {height: 400px;}
-	div.hero-sub-image {height: 350px;}
-	div.heading-text {font-size: 30px; padding-top: 20px; padding-bottom: 20px;}
-	.body-text {font-size: 15px;}
-	div.card-heading-text {font-size: 18px; padding-left: 5px; padding-top: 20px;  text-align: left;}
-	div.first-card-heading {padding-top: 0px;}
-	div.card-heading-body {font-size: 15px; padding-left: 5px; padding-right: 5px;}
-	div.card-body-text {font-size: 12px; padding-left: 10px; padding-right: 10px;}
-	div.card-header {font-size: 20px}
-
-	.self-portrait {
-		height: 18rem; 
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-	div.image-side-text {padding-top: 20px; font-size: 15px; padding-left: 10px; padding-right: 10px;}
-	nav.navbar-desktop {display: none;}
-	nav.navbar-mobile {display: block;}
-	div.resume-heading {font-size: 20px; text-align: left;}
-	div.padding-on-mobile {padding-top: 10px;}
-	div.hide-on-mobile {display: none;}
+    a#introButton {
+        width: 100px;
+        height: 40px;
+        padding-left: 9px;
+        padding-top: 3px;
+        padding-bottom: 0px;
+        padding-right: 10px;
+        border-color: black;
+        color: black;
+    }
+    a#introButton:hover {
+        background-color: black;
+        color: white;
+    }
+    div.button-cover {
+        text-align: center;
+    }
+    div.hero-large-font {
+        font-size: 30px;
+        font-weight: 400;
+        padding-bottom: 10px;
+    }
+    div.hero-large-sub-font {
+        font-size: 20px;
+        font-weight: 400;
+    }
+    div.hero-small-font {
+        font-size: 25px;
+        font-weight: 400;
+        padding-bottom: 10px;
+    }
+    div.hero-small-sub-font {
+        font-size: 20px;
+        font-weight: 400;
+    }
+    div.title-font {
+        font-size: 25px;
+        text-align: left;
+    }
+    div.hero-text {
+        position: relative;
+        transform: translateY(4rem);
+    }
+    div.hero-small-text {
+        position: relative;
+        transform: translateY(3.4rem);
+    }
+    div.subtitle-font {
+        font-size: 15px;
+        font-weight: 600;
+    }
+    div.hero-image {
+        height: 400px;
+    }
+    div.hero-sub-image {
+        height: 350px;
+    }
+    .body-text {
+        font-size: 15px;
+    }
+    div.card-heading-text {
+        font-size: 18px;
+        padding-left: 5px;
+        padding-top: 20px;
+        text-align: left;
+    }
+    div.first-card-heading {
+        padding-top: 0px;
+    }
+    div.card-heading-body {
+        font-size: 15px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    div.card-body-text {
+        font-size: 12px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    div.card-header {
+        font-size: 20px
+    }
+    .self-portrait {
+        height: 18rem;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    div.image-side-text {
+        padding-top: 20px;
+        font-size: 15px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    nav.navbar-desktop {
+        display: none;
+    }
+    nav.navbar-mobile {
+        display: block;
+    }
+    div.resume-heading {
+        font-size: 20px;
+        text-align: left;
+    }
+    div.padding-on-mobile {
+        padding-top: 10px;
+    }
+    div.hide-on-mobile {
+        display: none;
+    }
 }
 
-@media (min-device-width: 576px) and (max-width: 991.98px) { 
-	div.button-cover {text-align: left;}
-	div.hero-large-font {font-size: 30px; text-align: left; font-weight: 400; padding-bottom: 10px;}
-	div.hero-large-sub-font {font-size: 20px; text-align: left; font-weight: 400;}
-	div.hero-small-font {font-size: 25px; text-align: left; font-weight: 400; padding-bottom: 10px;}
-	div.hero-small-sub-font {font-size: 20px; text-align: left; font-weight: 400;}
-	div.title-font {font-size: 25px; text-align: left;} 
-	div.subtitle-font {font-size: 15px; font-weight: 600;} 
-	div.hero-image {height: 400px;}
-	div.hero-sub-image {height: 350px;}
-	div.heading-text {font-size: 30px; padding-top: 20px; padding-bottom: 20px;}
-	.body-text {font-size: 15px;}
-	div.card-heading-text {font-size: 18px; padding-top: 20px;  text-align: center;}
-	div.first-card-heading {padding-top: 0px;}
-	div.card-heading-body {font-size: 15px; padding-left: 5px; padding-right: 5px;}
-	div.card-body-text {font-size: 12px; padding-left: 10px; padding-right: 10px;}
-	div.card-header {font-size: 20px}
-	img.self-portrait {height: 300px; width: auto;}
-	div.image-side-text {padding-top: 20px; font-size: 15px; padding-left: 10px; padding-right: 10px;}
-	nav.navbar-desktop {display: none;}
-	nav.navbar-mobile {display: block;}
-	div.resume-heading {font-size: 20px; text-align: left;}
-	div.padding-on-mobile {padding-top: 10px;}
-	div.hide-on-mobile {display: none;}
-	div.hero-text {
-		position: relative;
-		transform: translate(5rem, 6rem);
-	} 
+@media (min-device-width: 576px) and (max-width: 991.98px) {
+    div.button-cover {
+        text-align: left;
+    }
+    div.hero-large-font {
+        font-size: 30px;
+        text-align: left;
+        font-weight: 400;
+        padding-bottom: 10px;
+    }
+    div.hero-large-sub-font {
+        font-size: 20px;
+        text-align: left;
+        font-weight: 400;
+    }
+    div.hero-small-font {
+        font-size: 25px;
+        text-align: left;
+        font-weight: 400;
+        padding-bottom: 10px;
+    }
+    div.hero-small-sub-font {
+        font-size: 20px;
+        text-align: left;
+        font-weight: 400;
+    }
+    div.title-font {
+        font-size: 25px;
+        text-align: left;
+    }
+    div.subtitle-font {
+        font-size: 15px;
+        font-weight: 600;
+    }
+    div.hero-image {
+        height: 400px;
+    }
+    div.hero-sub-image {
+        height: 350px;
+    }
+    .body-text {
+        font-size: 15px;
+    }
+    div.card-heading-text {
+        font-size: 18px;
+        padding-top: 20px;
+        text-align: center;
+    }
+    div.first-card-heading {
+        padding-top: 0px;
+    }
+    div.card-heading-body {
+        font-size: 15px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    div.card-body-text {
+        font-size: 12px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    div.card-header {
+        font-size: 20px
+    }
+    img.self-portrait {
+        height: 300px;
+        width: auto;
+    }
+    div.image-side-text {
+        padding-top: 20px;
+        font-size: 15px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    nav.navbar-desktop {
+        display: none;
+    }
+    nav.navbar-mobile {
+        display: block;
+    }
+    div.resume-heading {
+        font-size: 20px;
+        text-align: left;
+    }
+    div.padding-on-mobile {
+        padding-top: 10px;
+    }
+    div.hide-on-mobile {
+        display: none;
+    }
+    div.hero-text {
+        position: relative;
+        transform: translate(5rem, 6rem);
+    }
 }
 
-@media (min-device-width: 992px) and (max-device-width: 1199.98px) { 
-	div.button-cover {text-align: left;}
-	div.hero-large-font {font-size: 30px; text-align: left; font-weight: 400; padding-bottom: 10px;}
-	div.hero-large-sub-font {font-size: 20px; text-align: left; font-weight: 400;}
-	div.hero-small-font {font-size: 25px; text-align: left; font-weight: 400; padding-bottom: 10px;}
-	div.hero-small-sub-font {font-size: 20px; text-align: left; font-weight: 400;}
-	div.title-font {font-size: 25px; text-align: left;} 
-	div.hero-text {
-		top:20%;left:30%;
-		transform: translate(-30%,-20%);
-	} 
-	div.hero-small-text {top:50%;left:20%;transform: translate(-20%,-50%);}
-	div.subtitle-font {font-size: 15px; font-weight: 600;} 
-	div.hero-image {height: 400px;}
-	div.hero-sub-image {height: 350px;}
-	div.heading-text {font-size: 30px; padding-top: 20px; padding-bottom: 20px;}
-	.body-text {font-size: 15px;}
-	div.card-heading-text {font-size: 18px; padding-top: 20px;  text-align: center;}
-	div.first-card-heading {padding-top: 0px;}
-	div.card-heading-body {font-size: 15px; padding-left: 5px; padding-right: 5px;}
-	div.card-body-text {font-size: 12px; padding-left: 10px; padding-right: 10px;}
-	div.card-header {font-size: 20px}
-	img.self-portrait {height: 300px; width: auto;}
-	div.image-side-text {padding-top: 20px; font-size: 15px; padding-left: 10px; padding-right: 10px;}
-	nav.navbar-desktop {display: none;}
-	nav.navbar-mobile {display: block;}
-	div.resume-heading {font-size: 20px; text-align: left;}
-	div.padding-on-mobile {padding-top: 10px;}
-	div.hide-on-mobile {display: none;}
+@media (min-device-width: 992px) and (max-device-width: 1199.98px) {
+    div.button-cover {
+        text-align: left;
+    }
+    div.hero-large-font {
+        font-size: 30px;
+        text-align: left;
+        font-weight: 400;
+        padding-bottom: 10px;
+    }
+    div.hero-large-sub-font {
+        font-size: 20px;
+        text-align: left;
+        font-weight: 400;
+    }
+    div.hero-small-font {
+        font-size: 25px;
+        text-align: left;
+        font-weight: 400;
+        padding-bottom: 10px;
+    }
+    div.hero-small-sub-font {
+        font-size: 20px;
+        text-align: left;
+        font-weight: 400;
+    }
+    div.title-font {
+        font-size: 25px;
+        text-align: left;
+    }
+    div.hero-text {
+        top: 20%;
+        left: 30%;
+        transform: translate(-30%, -20%);
+    }
+    div.hero-small-text {
+        top: 50%;
+        left: 20%;
+        transform: translate(-20%, -50%);
+    }
+    div.subtitle-font {
+        font-size: 15px;
+        font-weight: 600;
+    }
+    div.hero-image {
+        height: 400px;
+    }
+    div.hero-sub-image {
+        height: 350px;
+    }
+    .body-text {
+        font-size: 15px;
+    }
+    div.card-heading-text {
+        font-size: 18px;
+        padding-top: 20px;
+        text-align: center;
+    }
+    div.first-card-heading {
+        padding-top: 0px;
+    }
+    div.card-heading-body {
+        font-size: 15px;
+        padding-left: 5px;
+        padding-right: 5px;
+    }
+    div.card-body-text {
+        font-size: 12px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    div.card-header {
+        font-size: 20px
+    }
+    img.self-portrait {
+        height: 300px;
+        width: auto;
+    }
+    div.image-side-text {
+        padding-top: 20px;
+        font-size: 15px;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
+    nav.navbar-desktop {
+        display: none;
+    }
+    nav.navbar-mobile {
+        display: block;
+    }
+    div.resume-heading {
+        font-size: 20px;
+        text-align: left;
+    }
+    div.padding-on-mobile {
+        padding-top: 10px;
+    }
+    div.hide-on-mobile {
+        display: none;
+    }
 }
-
-
-
