--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -27,47 +27,16 @@
 </div>
 {% endblock %}
 
-<!--
-<div class = "hero-sub-image">
-    <nav class="navbar navbar-expand-lg navbar-light navbar-transparent navbar-desktop">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav ml-auto navbar-right">
-        <li class="nav-item">
-          <a class="nav-link nav-text" href="../../index.html"><i class="fas fa-home"></i> Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-text" href=""><i class="fas fa-file-signature"></i> Resume</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link nav-text" href="../coding_portfolio/coding_portfolio.html"><i class="fas fa-laptop-code"></i> Coding Portfolio</a>
-        </li>
-        <li class = "nav-item">
-          <a class="nav-link nav-text" href="http://github.com/wkatbey"><i class="fab fa-github"></i> Github</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
-  <div class = "hero-small-text text-center">
-    <div class="hero-small-font">Resume & References</div>
-    <div class = "hero-small-sub-font">
-      Browse through my skills, education, and experience
-    </div>
-  </div>
-</div> -->
-
 {% block body %}
   <main>
     <div class="container">
-      <div class="heading-text">Objective</div>
+      <p class="heading-text text-center padding-top padding-bottom">Objective</p>
       <div class="row">
         <div class="col-lg-12">
-          <div class="resume-heading">Front-End, Back-End, or Full-Stack Development of Web Apps</div>
+          <p class="reading-font-lg text-center">Front-End, Back-End, or Full-Stack Development of Web Apps</p>
         </div>
       </div>
-      <div class="heading-text">Education</div>
+      <p class="heading-text">Education</p>
       <div class="row">
         <div class = "col-lg-6">
           <div class="text-center resume-heading">Wayne State University</div>
@@ -78,13 +47,6 @@
           <div class="text-center resume-heading">Major GPA: 4.0</div>
         </div>
       </div>
-      <!--<h3 class="text-center p-3">Important Coursework</h3>
-      <div class= "row">
-        <div class="col-lg-12">
-          <p class="text-center" style="font-size: 27px">Computer Science 1 - Object Oriented C++</p>
-          <p class="text-center" style="font-size: 27px">Computer Science 2 - Data Structures</p>
-        </div>
-      </div>-->
       <div class="heading-text">Work-Related Projects</div>
       <div class="row">
         <div class="col-lg-6">
