--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container content-top">
     <form method="POST">
         {% csrf_token %}
         {{ authentication_form | crispy }}
