--- a/user/templates/user/register.html
+++ b/user/templates/user/register.html
@@ -13,7 +13,8 @@
 {% endblock %}
 
 {% block body %}
-<div class="container">
+<div class="container content-top">
+    <p class = "text-center heading-text">Create a User, and Start Blogging!</p>
     <form method="POST">
         {% csrf_token %}
         {{ user_registration_form | crispy }}
