--- a/static_website/templates/static_website/resume.html
+++ b/static_website/templates/static_website/resume.html
@@ -30,13 +30,13 @@
 {% block body %}
   <main>
     <div class="container">
+      
       <p class="heading-text text-center padding-top padding-bottom">Objective</p>
-      <div class="row">
-        <div class="col-lg-12">
-          <p class="reading-font-lg text-center">Front-End, Back-End, or Full-Stack Development of Web Apps</p>
-        </div>
-      </div>
-      <p class="heading-text">Education</p>
+  
+     
+      <p class="reading-font-lg text-center">Front-End, Back-End, or Full-Stack Development of Web Apps</p>
+   
+      <p class="heading-text text-center padding-top">Education</p>
       <div class="row">
         <div class = "col-lg-6">
           <div class="text-center resume-heading">Wayne State University</div>
@@ -47,96 +47,85 @@
           <div class="text-center resume-heading">Major GPA: 4.0</div>
         </div>
       </div>
-      <div class="heading-text">Work-Related Projects</div>
+      <p class="heading-text text-center padding-top padding-bottom">Work-Related Projects</p>
       <div class="row">
         <div class="col-lg-6">
-          <div class="resume-heading"><a style="color: #696969">Call Harbor: Project 'Betroit'</a></div>
-          <br>
-          <div class="card-body-text">
+          <p class="reading-font-lg text-center gray-link">Call Harbor: Project 'Betroit'</p>
+          <p class="card-body-text">
             As a Full-Stack Developer, I developed a web application whose purpose is to automate the new-client process. 
             There are two interfaces to the application: Client-Side, and Staff-Side.
             <br><br>
-            From the Staff-Side, a staff member would put the client's requests into a specialized form, generate a PIN for the client, and send the client over to their side of the application. 
+            From the Staff-Side, a staff member would put the client's requests into a specialized form, generate a PIN for the client, 
+            and send the client over to their side of the application. 
             <br><br>
-            From the Client-Side, the client uses the pin to log into a customized form whereby they enter in their client data. Furthermore, this side of the application utilizes REST API services. The Client-Side app is complex, tabbed, and uses an extensive verification process. 
-            <br><br>
-            <div class="body-text">Written in AngularJS, PHP, & mySQL</div>
-          </div>
+            From the Client-Side, the client uses the pin to log into a customized form whereby they enter in their client data. 
+            Furthermore, this side of the application utilizes REST API services. 
+            The Client-Side app is complex, tabbed, and uses an extensive verification process. 
+          </p>
+          <p class="reading-font">Written in AngularJS, PHP, & mySQL</p>
         </div>
-        <div class="col-lg-6">
-          <div class="resume-heading padding-on-mobile text-center"><a style = "color: #696969">Static Website - Contents Protected</a></div>
-          <br>
-          <div class="card-body-text">
-            Designed a static page during my employment at Active Solutions Group. Consists of a Landing Page, Products page, Team page, and Contact Us page. 
+        <div class="col-lg-6 col-sm-12 pt-lg-0 pt-sm-3">
+          <p class="reading-font-lg text-center gray-link"><a>Static Website - Contents Protected</a></p>
+          <p class="card-body-text">
+            I designed a static page during my employment at Active Solutions Group. It consists of a Landing Page, Products page, Team page, and Contact Us page. 
             The Contact Us page sends an email to staff through PHP. Additionally, Contact Us makes use of Google’s Maps Javascript API. 
-            <br><br>
-          <div class="body-text">Written in HTML, CSS, Boostrap, Javascript, and PHP</div>
-          </div>
+          </p>
+          <p class="reading-font">Written in HTML, CSS, Boostrap, Javascript, and PHP</p>
         </div>
       </div>
       <hr>
-      <div class="heading-text pb-0">Open-Source (Side) Projects</div>
-      <div class="text-center lead">Click on a project's name to view its Github</div>
-      <br><br>
+      <p class="heading-text text-center">Open-Source (Side) Projects</p>
+      <p class="subheading-text text-center padding-bottom">Click on a project's name to view its Github</p>
       <div class="row">
         <div class="col-lg-2"></div>
         <div class="col-lg-4">
-          <div class="resume-heading padding-on-mobile text-center">
-            <a href="https://github.com/DSWhite96/Campus_Price_And_Dice" style = "color: #696969">Campus Price & Dice</a>
-          </div>
-          <br>
-          <div class="card-body-text">
+          <p class="resume-heading text-center">
+            <a class="gray-link" href="https://github.com/DSWhite96/Campus_Price_And_Dice">Campus Price & Dice</a>
+          </p>
+          <p class="card-body-text">
             Working together with a team to develop a web application that allows users to compare prices and view food items 
             among restaurants on campus.
-            <br><br>
-          <div class="body-text language-text">Written in Django, Vue.js</div>
-          </div>
+          </p>
+          <p class="reading-font">Written in Django, Vue.js</p>
         </div>
-        <div class="col-lg-4">
-          <div class="resume-heading  text-center">
-            <a href="https://github.com/wkatbey/static_portfolio" style = "color: #696969">Online Portfolio</a>
-          </div>
-          <br>
-          <div class="card-body-text">
+        <div class="col-lg-4 col-sm-12 pt-lg-0 pt-sm-3">
+          <p class="resume-heading text-center ">
+            <a class="gray-link" href="https://github.com/wkatbey/static_portfolio">Online Portfolio</a>
+          </p>
+          <p class="card-body-text">
             Wrote a website to host my resume and projects. Includes an introduction and a resume page. The contents of the website
             are responsive to an extent.
-            <br><br>
-            <div class="body-text">Written in HTML, CSS, Bootstrap</div>
-          </div>
+          </p>
+          <p class="reading-font">Written in HTML, CSS, Bootstrap</p>
         </div>
       </div>
-      <br><br>
       <div class="row">
         <div class="col-lg-2"></div>
-         <div class="col-lg-4">
-            <div class="resume-heading  text-center">
-              <a href="https://github.com/wkatbey/House-Management-Application" style = "color: #696969">House Management</a>
-            </div>
-            <br>
-            <div class="card-body-text">
+         <div class="col-lg-4 col-sm-12 pt-lg-0 pt-sm-3">
+            <p class="resume-heading  text-center">
+              <a class="gray-link" href="https://github.com/wkatbey/House-Management-Application">House Management</a>
+            </p>
+            <p class="card-body-text">
               User can create a house with several appliances (doors, lights, air conditioners). Following
               creation, a house’s appliances can be manipulated.
-              <br><br>
-              <div class="body-text">Written in C++, runs in the console</div>
-            </div>
+            </p>
+            <p class="reading-font">Written in C++, runs in the console</p>
           </div>
-          <div class="col-lg-4">
-            <div class="resume-heading padding-on-mobile text-center">
+          <div class="col-lg-4 col-sm-12 pt-lg-0 pt-sm-3">
+            <p class="resume-heading text-center">
               <a href="https://github.com/wkatbey/Student-Teacher-Database" style = "color: #696969">Student/Teacher App</a>
-            </div>
-            <br>
-            <div class="card-body-text">
+            </p>
+            <p class="card-body-text">
               User can create, save, and load student and teacher database. Bank Account functionality
               implemented. Developed as a Term Project for Computer Science 1.
-              <br><br>
-            <div class="body-text language-text">Written in C++, runs in the console</div>
-            </div>
+            </p>
+            <p class="reading-font">Written in C++, runs in the console</p>
           </div>
          </div>
       </div>
       <br>
-      <div class="heading-text">My Skillset</div>
-      <div class="text-center body-text">
+      <p class="heading-text text-center padding-top">My Skillset</p>
+      <div class="text-center reading-font">
         <p>C++ & Object Oriented Programming</p>
         <p>HTML</p>
         <p>CSS, Bootstrap, Javascript</p>
@@ -147,7 +136,7 @@
         <p>Algorithm Analysis</p>
         <p>Data Structures</p>
       </div>
-      <div class="heading-text">References</div>
+      <p class="heading-text text-center padding-top">References</p>
       <div class = "row text-center body-text">
         <div class="col-lg-4">
               <p>Daniel Ouellette</p>
