--- a/static_website/templates/static_website/index.html
+++ b/static_website/templates/static_website/index.html
@@ -1,17 +1,20 @@
 {% extends './base.html' %}
 
 {% block hero-image-text %}
-<div class = "hero-text text-center">
-  <div class="hero-large-font">Wassim Katbey</div>
-  <p class = "hero-large-sub-font">
+<div class="container-fluid hero-text">
+  <p class="hero-home-heading text-center">Wassim Katbey</p>  
+  <p class = "hero-home-subheading text-center">
     Full-Stack Web Developer, and Hobbyist
   </p>
-  <div class="button-cover">
+  <div class="text-center">
     <form action="#intro">
-     <br><button type="submit" id = "introButton" class="btn-hover color-9">Meet Me</button>
+      <button type="submit" id = "introButton" class="btn-hover color-9 text-center">Meet Me</button>
     </form>
   </div>
 </div>
+
+
+
 {% endblock %}
 
 {% block mobile-home-nav %}
