Designing the new blogging platform

--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -2,44 +2,80 @@
 {% load static %}
 
 {% block head_elements %}
+<link rel="stylesheet" href="{% static 'blog/navbar.css' %}">
+<link rel="stylesheet" href="{% static 'blog/spacing.css' %}"> 
+<link rel="stylesheet" href="{% static 'blog/hero-image.css' %}"> 
+<link rel="stylesheet" href="{% static 'blog/fonts.css' %}"> 
 <script src="https://cdn.tiny.cloud/1/no-api-key/tinymce/5/tinymce.min.js"></script>
-<script src='https://cdn.tiny.cloud/1/9lidlfl9gfd74zusr0iykq72dtxk48gnba2vupju5j0gdmfs/tinymce/5/tinymce.min.js'>
-<script>tinymce.init({selector:'textarea'});</script>
+<script src='https://cdn.tiny.cloud/1/9lidlfl9gfd74zusr0iykq72dtxk48gnba2vupju5j0gdmfs/tinymce/5/tinymce.min.js'></script>
+<script>
+  tinymce.init({selector:'textarea'});
+</script>
 {% endblock %}
 
 {% block hero-image-type %}
-<div class = "hero-sub-image">
+<div class = "hero-blog-small-image">
 {% endblock %}
 
 {% block hero-image-text %}
-<div class = "hero-text text-center">
-<div class="hero-large-font">Create a Blog</div>
+<div class="container-fluid hero-blog-small-text">
+    <p class="hero-blog-heading text-center">Create a Post</p>
 </div>
 {% endblock %}
 
 {% block body %}
 <div class="container">
-    <div class = "heading-text" style="padding-bottom: 0px; padding-top: 50px" id="intro">
-      Write Away! <img src="https://img.icons8.com/nolan/64/000000/speech-bubble.png">
+    <p class="heading-text padding-top padding-bottom text-center">
+        Write Away  <img src="https://img.icons8.com/cute-clipart/64/000000/airplane-window-open.png">
+    </p>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="text-center">
+                <div class="blog-nav-item">
+                    <i class="fas fa-bars"></i>
+                    <a class="gray-link" href="{% url 'blog:blog-list' %}">
+                        Portal
+                    </a>
+                </div>
+                <div class="blog-nav-item">
+                    <i class="fas fa-th-large"></i> 
+                    <a class="gray-link" href="#">
+                        My Posts
+                    </a>
+                </div>
+                <div class="blog-nav-item">
+                    <i class="fas fa-id-card"></i>
+                    <a class="gray-link" href="#">
+                        My Profile
+                    </a>
+                </div>
+                <div class="blog-nav-item">
+                    <i class="fas fa-users"></i> 
+                    <a class="gray-link" href="#">
+                        Users
+                    </a>
+                </div>
+            </div>
+        </div>
     </div>
+    <hr>
     <form method='POST'>
       {% csrf_token %}
-      <div class="form-group">
+      <div class="form-group padding-top">
           {{ form.title.label_tag }}
           {{ form.title }}
       </div>
       <div class="form-group">
         {{ form.text_entry }}
+      
       </div>
       <div class="row">
         <div class="col-lg-6">
-          <button type="submit" class="btn btn-outline-primary"> 
-            {% if form.title %}
-              Save Changes
-            {% else %}
-              Create Post
-            {% endif %}
-          </button>
+          {% if object %}
+          <input type="submit" class="btn btn-outline-primary" value="Save Changes">
+          {% else %}
+          <input type="submit" class="btn btn-outline-primary" value="Post">
+          {% endif %}
         </div>
       </div>
     </form>
