--- a/blog/templates/blog/blogentry_list.html
+++ b/blog/templates/blog/blogentry_list.html
@@ -1,26 +1,104 @@
-{% extends 'static_website/base.html' %}
+{% extends 'static_website/base.html' %} 
+{% load static %} 
+
+{% block head_elements %}
+<link rel="stylesheet" href="{% static 'blog/navbar.css' %}">
+<link rel="stylesheet" href="{% static 'blog/spacing.css' %}"> 
+<link rel="stylesheet" href="{% static 'blog/hero-image.css' %}"> 
+<link rel="stylesheet" href="{% static 'blog/fonts.css' %}"> 
+{% endblock %} 
 
 {% block hero-image-type %}
-<div class = "hero-sub-image">
-{% endblock %}
+<div class="hero-blog-image">
+{% endblock %} 
 
 {% block hero-image-text %}
-<div class = "hero-text text-center">
-<div class="hero-large-font">SkyBlue Blogging</div>
-</div>
-{% endblock %}
+    <div class="container-fluid hero-blog-text">
+        <p class="hero-blog-heading text-center">SkyBlue Blogging</p>
+        <p class="hero-blog-subheading text-center">
+            A Simple Journaling Platform
+        </p>
+    </div>
+{% endblock %} 
 
 {% block body %}
-<div class="container">
-    <div class = "heading-text" style="padding-bottom: 0px; padding-top: 50px" id="intro">
-      A Programmer's Haven <img src="https://img.icons8.com/nolan/64/000000/speech-bubble.png">
+    <div class="container">
+        <p class="heading-text padding-top padding-bottom text-center">
+            Portal 
+            <span class="blog-heading-icon">
+                <i class="fas fa-wine-glass-alt"></i>
+            </span>
+        </p>
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="text-center">
+                    <div class="blog-nav-item">
+                        <i class="fas fa-edit"></i>
+                        <a class="gray-link" href="{% url 'blog:blog-create' %}">
+                            Write a new Entry
+                        </a>
+                    </div>
+                    <div class="blog-nav-item">
+                        <i class="fas fa-th-large"></i> 
+                        <a class="gray-link" href="#">
+                            My Posts
+                        </a>
+                    </div>
+                    <div class="blog-nav-item">
+                        <i class="fas fa-id-card"></i>
+                        <a class="gray-link" href="#">
+                            My Profile
+                        </a>
+                    </div>
+                    <div class="blog-nav-item">
+                        <i class="fas fa-users"></i> 
+                        <a class="gray-link" href="#">
+                            Users
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <hr>
+        <p class="heading-text text-center padding-top padding-bottom">
+            Current Topics
+            <span class="blog-heading-icon">
+                <i class="fas fa-glass-cheers"></i>
+            </span>
+        </p>
+        {% for blog in blog_entries %}
+        <div class="row">
+            <div class="col-lg-6">
+                <p class="reading-font">
+                    <a class="gray-link" href="{% url 'blog:blog-detail' blog.id %}">{{ blog.title }}</a>
+                    <a class="gray-link blog-heading-icon" href="{% url 'blog:blog-update' blog.id %}">
+                        <i class="fas fa-edit"></i>
+                    </a>
+                    <a href="#" class="gray-link blog-heading-icon" data-toggle="modal" data-target="#exampleModal">
+                        <i class="far fa-trash-alt"></i>
+                    </a>
+                </p>
+            </div>
+        </div>
+        <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                    </div>
+                    <div class="modal-body">
+                        ...
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-outline-secondary" data-dismiss="modal">Close</button>
+                        <a type="button" href="{% url 'blog:blog-delete' blog.id %}" class="btn btn-outline-danger">Delete</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
     </div>
-    {% for blog in blog_entries %}
-    <div class="row">
-      <div class="col-lg-6">
-        {{ blog.title }}
-      </div>
-    </div>
-    {% endfor %}
-</div>
-{% endblock %}
+    {% endblock %}
