--- a/blog/templates/blog/blogentry_confirm_delete.html
+++ b/blog/templates/blog/blogentry_confirm_delete.html
@@ -9,17 +9,16 @@
 {% endblock %}
 
 {% block hero-image-type %}
-<div class = "">
+<div class="">
 {% endblock %}
 
 {% block hero-image-text %}
 
 {% endblock %}
 
-
 {% block body %}
 <div class="container">
-    <p class="heading-text text-center">{{ blog_entry.title }}</p>
+    <p class="heading-text text-center">Confirmation</p>
     <div class="row">
         <div class="col-lg-12">
             <div class="text-center">
@@ -51,12 +50,12 @@
         </div>
     </div>
     <hr>
-    <div class="row">
-      <div class="col-lg-6">
-        {{ blog_entry.text_entry | safe }}
-      </div>
-    </div>
+    <form method="post">{% csrf_token %}
+        <p class="reading-font">Are you sure you want to delete "{{ object.title }}"?</p>
+        <input type="submit" class="btn btn-outline-dark" value="Confirm">
+    </form>
 </div>
+
 {% endblock %}
 
 {% block custom_footer_elements %}
