--- a/blog/templates/blog/blogentry_form.html
+++ b/blog/templates/blog/blogentry_form.html
@@ -14,13 +14,11 @@
 {% endblock %}
 
 {% block hero-image-type %}
-<div class = "hero-blog-small-image">
+<div class = "">
 {% endblock %}
 
 {% block hero-image-text %}
-<div class="container-fluid hero-blog-small-text">
-    <p class="hero-blog-heading text-center">Create a Post</p>
-</div>
+
 {% endblock %}
 
 {% block body %}
@@ -70,7 +68,7 @@
       
       </div>
       <div class="row">
-        <div class="col-lg-6">
+        <div class="col-lg-12 text-right">
           {% if object %}
           <input type="submit" class="btn btn-outline-primary" value="Save Changes">
           {% else %}
@@ -82,6 +80,14 @@
 </div>
 {% endblock %}
 
-{% block footer_elements %}
-
+{% block custom_footer_elements %}
+<div class="container">
+    <div class="row">
+        <div class="col-lg-6">
+        <a class="text-muted" href="https://icons8.com/icon/77154/identity-theft">
+            Check out Icons8! I used their icons
+        </a>
+        </div>
+    </div>
+</div>
 {% endblock %}
