--- a/user/templates/user/login.html
+++ b/user/templates/user/login.html
@@ -2,22 +2,75 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
+{% block head_elements %}
+<link rel="stylesheet" href="{% static 'blog/navbar.css' %}">
+<link rel="stylesheet" href="{% static 'blog/spacing.css' %}"> 
+<link rel="stylesheet" href="{% static 'blog/hero-image.css' %}"> 
+<link rel="stylesheet" href="{% static 'blog/fonts.css' %}"> 
+{% endblock %}
+
 {% block hero-image-type %}
-<div class = "hero-sub-image">
+<div class = "">
 {% endblock %}
 
 {% block hero-image-text %}
-<div class = "hero-text text-center">
-<div class="hero-large-font">User Registration</div>
-</div>
 {% endblock %}
 
 {% block body %}
 <div class="container content-top">
+    <p class="heading-text text-center">Sign into Your Account</p>
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="text-center">
+                <div class="blog-nav-item">
+                    <i class="fas fa-bars"></i>
+                    <a class="gray-link" href="{% url 'blog:blog-list' %}">
+                        Portal
+                    </a>
+                </div>
+                <div class="blog-nav-item">
+                    <i class="fas fa-th-large"></i> 
+                    <a class="gray-link" href="#">
+                        My Posts
+                    </a>
+                </div>
+                <div class="blog-nav-item">
+                    <i class="fas fa-id-card"></i>
+                    <a class="gray-link" href="#">
+                        My Profile
+                    </a>
+                </div>
+                <div class="blog-nav-item">
+                    <i class="fas fa-users"></i> 
+                    <a class="gray-link" href="#">
+                        Users
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <hr>
     <form method="POST">
         {% csrf_token %}
-        {{ authentication_form | crispy }}
-        <input type="submit">
+        <div class="form-group">
+            <div class="col-lg-6">
+                {{ authentication_form | crispy }}
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-lg-6">
+                <input type="submit" class="btn btn-outline-dark btn-block" value="Sign in">
+                <p class="text-muted padding-top">
+                    <a class="gray-link" href="{% url 'user:register' %}">
+                        Don't have an account? Register here
+                    </a>
+                </p>
+            </div>
+        </div>
+        
     </form>
 </div>
+{% endblock %}
+
+{% block custom_footer_elements %}
 {% endblock %}
